--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -1089,7 +1089,17 @@ $press-after-value-gap: 20px;
 } 
 
 .appStore {
+	display: block;
 	height: 75px;
+	width: auto;
+	max-width: 100%;
+	-webkit-user-drag: none;
+	user-select: none;
+}
+
+.appStoreLink {
+	display: inline-block;
+	line-height: 0;
 }
 
 
